fix: 修复管理员审批停靠点接口
